--- a/README
+++ b/README
@@ -9,8 +9,7 @@ flexibility in mind. It allows developers to built better and easy to maintain
 websites with PHP.
 
 Symfony can be used to develop all kind of websites, from your personal blog
-to high traffic ones like Dailymotion or Yahoo! Answers.
-
+to high traffic ones like Dailymotion or Yahoo! SATHIYA
 High Performance
 ----------------
 
